# Ruh

./: BLOAT_ANALYSIS.md  CLAUDE.md  DEVPOST.md  PRODUCTION_READINESS_AUDIT.md  README.md  SUPABASE_RESET_GUIDE.md  landing-page-svelte.txt  landing-page.tsx  ruh-brand-guide.md  svelte-config.js
backend/: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  cloudbuild.yaml  deploy.sh  pyproject.toml  requirements.txt  run.py  service.yaml  set-env.sh  setup-secrets.sh
backend/migrations/: 001_create_tables.sql  002_seed_knowledge_base.sql  CLAUDE.md
backend/src/: CLAUDE.md
backend/src/api/: CLAUDE.md  README.md  auth.py  main.py
backend/src/application/: CLAUDE.md
backend/src/domain/: CLAUDE.md  README.md  extraction_schemas.py  harm_calculator.py  ingredient_matcher.py  models.py
backend/src/infrastructure/: CLAUDE.md  README.md  claude_agent.py  claude_query.py  config.py  database.py  product_scraper.py  review_vector_service.py  token_tracker.py  validation_logger.py
backend/supabase/: CLAUDE.md  FUTURE_IMPROVEMENTS.md  README.md
backend/supabase/migrations/: 000_drop_all.sql  001_create_tables.sql  002_extend_product_analyses.sql  002_seed_allergens_pfas.sql  003_create_validation_logs.sql  003_enable_rls.sql  004_create_validation_logs.sql  005_create_review_embeddings.sql  006_enable_rls_all_tables.sql  007_add_token_tracking.sql  CLAUDE.md
backend/supabase/scripts/: clear_cache.sql
backend/tests/: CLAUDE.md  README.md
backend/tests/e2e/: CLAUDE.md  (+1 more)
(+62 files in other folders)
